[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Scripts/SpinningBullet.gd" type="Script" id=1]
[ext_resource path="res://Sprites/cucumber_smol.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 6.5 )

[node name="SpinningBullet" type="Area2D" groups=["enemy", "spinning"]]
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0.541176, 0.00784314, 1 )
rotation = 0.785397
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 1 )

[node name="SpinIncrement" type="Timer" parent="."]

[node name="DeviationDelay" type="Timer" parent="."]
one_shot = true

[node name="Lifespan" type="Timer" parent="."]
wait_time = 30.0

[connection signal="area_entered" from="." to="." method="_on_SpinningBullet_area_entered"]
[connection signal="timeout" from="SpinIncrement" to="." method="_on_SpinIncrement_timeout"]
[connection signal="timeout" from="DeviationDelay" to="." method="_on_DeviationDelay_timeout"]
[connection signal="timeout" from="Lifespan" to="." method="_on_Lifespan_timeout"]
